add morebutton script for task_2.1

--- a/task_2.1/index.html
+++ b/task_2.1/index.html
@@ -13,7 +13,7 @@
         <div class="main__card card">
           <div class="card__img-shadow">
             <img
-              src="./src/img/sankt-peterburg-piter-st-3495.jpg"
+              src="./src/img/sankt-peterburg-piter-st-3495x4.jpg"
               alt="Санкт-Петербург"
             />
             <div class="card__status-indent_top">новинка</div>
@@ -57,7 +57,7 @@
         <div class="main__card card">
           <div class="card__img">
             <img
-              src="./src/img/sankt-peterburg-piter-st-3495.jpg"
+              src="./src/img/sankt-peterburg-piter-st-3495x4.jpg"
               alt="Санкт-Петербург"
             />
             <div class="card__status">новинка</div>
@@ -100,5 +100,6 @@
         </div>
       </main>
     </div>
+    <script src="./src/js/index.js"></script>
   </body>
 </html>
