set desktop adaptive

--- a/task_2.1/index.html
+++ b/task_2.1/index.html
@@ -57,10 +57,10 @@
         <div class="main__card card">
           <div class="card__img">
             <img
-              src="./src/img/sankt-peterburg-piter-st-3495x4.jpg"
+              src="./src/img/music.jpg"
               alt="Санкт-Петербург"
             />
-            <div class="card__status">новинка</div>
+            <div class="card__status">круглый год</div>
           </div>
           <div class="card__info info">
             <div class="info__clock clock">
